--- a/backend/src/order/templates/bill.hbs
+++ b/backend/src/order/templates/bill.hbs
@@ -69,7 +69,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="logo">
+      <header>
         <div>
           <img
             width="180px"
@@ -77,7 +77,7 @@
             alt="logo"
           />
         </div>
-        <div class="date">{{createdAt}}</div>
+        <div class="date"><b>Date de la commande</b> : <span>{{createdAt}}</span></div>
       </header>
       <h1>Bon de commande pour <span>{{providerName}}</span></h1>
       <table>
